fixed the alignment on the sort by

--- a/app/assets/stylesheets/components/_tag_pills.scss
+++ b/app/assets/stylesheets/components/_tag_pills.scss
@@ -1,4 +1,4 @@
-.tags {
+.tag-pills {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
